--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@fortawesome/fontawesome-free": "^7.0.1",
+        "@mui/icons-material": "^7.3.2",
+        "@mui/material": "^7.3.2",
         "framer-motion": "^12.23.12",
         "motion": "^12.23.12",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-icons": "^5.5.0"
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^7.8.2"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.1.12",
