--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "motion": "^12.23.12",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-icons": "^5.5.0"
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^7.8.2",
+        "swiper": "^11.2.10"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.1.12",
