--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
         "@fortawesome/fontawesome-free": "^7.0.1",
         "@mui/icons-material": "^7.3.2",
         "@mui/material": "^7.3.2",
+        "@react-spring/web": "^10.0.1",
         "framer-motion": "^12.23.12",
         "motion": "^12.23.12",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
+        "react-intersection-observer": "^9.16.0",
         "react-router-dom": "^7.8.2"
     },
     "devDependencies": {
